# devops-exam

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  locustfile.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
adr/: 0001-record-architecture-decisions.md  0002-architecture-choice.md
app/: main.py
reports/: classification_report.txt  evidently_data_drift.html  exam_{Zorin}_test_report_100_10_60.html  locust_report.html  locust_report_cloud.html
src/: train.py
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
tofu/: main.tf  terraform.tfvars.example
